fixed overflowing in mobile

--- a/styles.scss
+++ b/styles.scss
@@ -9,6 +9,7 @@
 
 html {
   height: 100%;
+  width: 100%;
 }
 
 body {
@@ -21,12 +22,13 @@ nav {
   // background: linear-gradient(to left, #232526, #414345);
   background: linear-gradient(to left, #131313, #303030);
   top: 0;
-  position: sticky;
+  position: fixed;
   box-shadow: 3px 3px 20px 0px rgba(10, 10, 10, 0.3);
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 9vh;
+  width: 100%;
   z-index: 2;
 
   .burger {
@@ -119,7 +121,7 @@ header {
     justify-content: center;
     align-items: center;
     margin-bottom: 0;
-    min-height: 91vh;
+    min-height: 100vh;
     // background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     //   url(./images/headerpic-pexels.jpg) no-repeat center;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -615,6 +617,10 @@ header {
       }
     }
   }
+}
+
+.page {
+  overflow-x: hidden;
 }
 
 @import './media';
